# ClusterEngine

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  app.cpp  app.h  main.cpp
assets/scene/: scene_template.json
assets/shader/: model.vert  singletex.frag
ext/: CMakeLists.txt  objloader.h
includes/: gamedata.h  gl_headers.h  gltypes.h  light.h  stbi_header.h
includes/debug/: debug.cpp  debug.h
includes/ext/: objloader.h
includes/foundation/: aabb.h  framebuffer.h  objobject.h  texture.h
includes/glfoundation/: framebuffer.h  gltypes.h  shader.h
includes/math/: aabb.h
includes/utilities/: camera.h  light.h  material.h  objobject.h
src/: CMakeLists.txt  camera.cpp  color.cpp  color.h  game.cpp  game.h  gamedata.cpp  gltypes.cpp  gltypes.h  light.cpp  main.cpp  main.h  other_handlers.cpp
src/app/: CMakeLists.txt  app.cpp  app.h
src/assets/shader/: instanced_w_lighting.frag  instanced_w_lighting.vert  model.frag  model.vert  monotone.frag  monotone.vert  monotone_lighting.frag  monotone_lighting.vert  multiple_lighting.frag  multiple_lighting.vert  singletex.vert  skybox.vert
src/assets/shadercode/: gbuffer.frag  skybox.vert
src/backups/: gltypes_backup.cpp  gltypes_backup.h  main_backup.cpp  terrain_backup.cpp
src/components/: Icomponents.h  car.cpp  car.h  coin.cpp  coin.h  drawable.cpp  drawable.h  grasspatch.cpp  grasspatch.h  hitable.cpp  hitable.h  light.cpp  light.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  track.cpp  track.h
src/components/appearance/: material.cpp  material.h
src/debug/: debug.cpp  debug.h  test_elementdraw.cpp
src/ext/: objloader.cpp  objloader.h
src/foundation/: aabb.cpp  convexhull.cpp  convexhull.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  objloader.h  objobject.cpp  objobject.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h
src/foundation/math/: Imath.h
src/foundation/objloader/: model.h
src/gamestate/: Istate.h  doomedstate.h  endstate.h  pausestate.cpp  pausestate.h  racingstate.cpp  racingstate.h  splashstate.h  startstate.h  state.cpp  state.h  statemachine.cpp  statemachine.h  wildstate.h
src/glfoundation/: camera.cpp  camera.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  gbuffer.cpp  gbuffer.h  glincludes.h  globject.cpp  globject.h  gltypes.cpp  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  objloader.cpp  objobject.cpp  renderable.cpp  renderable.h  renderstate.cpp  renderstate.h  scene.cpp  scene.h  shader.cpp  shader.h  shaderregistry.cpp  shaderregistry.h  skybox.cpp  skybox.h  texture.cpp  texture.h  texturegenerator.cpp  texturegenerator.h  texturemanager.cpp  texturemanager.h  textureregistry.cpp  textureregistry.h  (+4 more)
src/math/: Imath.h  aabb.cpp  constants.h  convexhull.cpp  convexhull.h
src/physics/: CMakeLists.txt  collisiondetector.cpp  collisiondetector.h
src/pipeline/: CMakeLists.txt  deferedcluster.cpp  deferedcluster.h  deferred.cpp  deferred.h  forward.cpp  forward.h  pipelinebase.cpp  pipelinebase.h
src/renderpass/: Irenderpass.h  bloompass.cpp  bloompass.h  gammacorrectpass.cpp  gammacorrectpass.h  gaussianblurpass.cpp  gaussianblurpass.h  lightingpass.cpp  lightingpass.h  lightpass.cpp  lightpass.h  renderpass.cpp  renderpass.h  skyboxpass.cpp  skyboxpass.h  sumpass.cpp  sumpass.h  tonemappass.cpp  tonemappass.h
src/renderpass/lightmanage/: clusterpass.cpp  clusterpass.h
src/renderpass/lightmanage/cluster/: keycomputepass.cpp  keycomputepass.h  keysortpass.cpp  keysortpass.h
src/renderpass/lightmanage/deferred/: directpass.cpp  directpass.h  indirectpass.cpp  indirectpass.h
src/renderpass/lightmanage/forward/: directpass.cpp  directpass.h
src/shader/: bloom.frag  blur.frag  directlighting.frag  gammacorrect.frag  gbuffer.frag  lighting.frag  position.vert  quad.vert  shadow.frag  singletexture.frag  skybox.frag  skybox.vert  sum.frag  tonemap.frag
src/shader/lightmanage/cluster/: keycompute.glsl
src/shader/lightmanage/deferred/: direct.frag
src/shader/lightmanage/forward/: direct.frag
src/utilities/: camera.cpp  camera.h  color.cpp  fpscounter.cpp  fpscounter.h  input.cpp  light.cpp  light.h  logger.cpp  logger.h  material.cpp  material.h  mathconst.h  nonedit.cpp  objloader.cpp  objloader.h  objobject.cpp  objobject.h  timer.cpp  timer.h
src/utilities/debug/: debug.cpp  debug.h
src/utilities/managers/: Imanagers.h  inputmanager.cpp  inputmanager.h  resourcemanager.cpp  resourcemanager.h  windowmanager.cpp  windowmanager.h
